fix: correct comment formatting in .gitignore for reference directory

--- a/SenseHATWebDashboard/.gitignore
+++ b/SenseHATWebDashboard/.gitignore
@@ -30,8 +30,7 @@ dist/
 docs/
 
 # reference to ignore node modules if any frontend is added later
-
-reference/
+# reference/
 
 # Sensitive information
 .env
